并发编程补充：ReentrantLock原理。